fix bugs on clear

--- a/app/components/citation-display/template.hbs
+++ b/app/components/citation-display/template.hbs
@@ -196,7 +196,7 @@
                         {{input value=attrs.submitted.source id='source' class="form-control" placeholder="Library Catalog"}}
                     </div>
                     <div class="col-sm-6 form-group">
-                        {{input value=attrs.submitted.publisherPlace class="form-control" placeholder="Pub. Location"}}
+                        {{input value=attrs.submitted.location class="form-control" placeholder="Pub. Location"}}
                     </div>
                   </div>
                   <div class="row">
