--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,10 +5,11 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
   <div class="section" id="my-amazing-bibliography">
-      <h3>My Amazing Bibliography</h3>
+      <h3>Bibliography</h3>
   </div>
   {{outlet}}
 </body>
