--- a/app/components/citation-display/template.hbs
+++ b/app/components/citation-display/template.hbs
@@ -2,19 +2,20 @@
   <meta charset="iso-8859-1">
 </head>
 {{yield}}
-
 <div class="container">
   <button class="btn btn-default" {{action "formShow"}}>Add Citation</button>
   <div class="row">
-    <div class="col-sm-6" id="csl-outer-block">
-      <div id="csl-inner-block">
+    <div class="col-sm-6">
+      <div id="csl-inner-block" id="citationUnit">
+        <span class="title" >Citations </span><span id="downloadButton"></span>
+        <hr>
         <div class="csl-content-block" id="csl-content-block"></div>
       </div>
     </div>
   </div>
   {{#if isClicked }}
   <div class="row">
-    <div class="col-sm-6" id="csl-outer-block">
+    <div class="col-sm-6" >
       <div id="csl-inner-block">
         <div class="csl-content-block" id="csl-form-block">
             <form class="add-citation-form" id="myform" type="post">
